# http3x

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: wt_demo.html  wt_demo.py
docs/: http3.md  webtransport.md
http3x/: __init__.py  h3.py  wt.py
http3x/_core/: base.py  http3.py  webtransport.py
tests/: h3_mini.cmd  h3_mini.py  wt_chat_stream.html  wt_chat_stream.py  wt_mini.html  wt_mini.py
